--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -11,6 +11,7 @@
     .heart {
         padding-top: 0.5em;
         font-size: 22px;
+        z-index: 2;
     }
 
     &__link {
